# blindfold

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  NOTICE  README.md  package-lock.json  package.json  pyproject.toml
.claude/agents/: browser-verify.md  implement.md  verify.md
.github/workflows/: platform-verify.yml
.sandcastle/: .gitignore  CODING_STANDARDS.md  Dockerfile  implement-prompt.md  mac-verify-prompt.md  main.mts  merge-prompt.md  merge-review-prompt.md  package-lock.json  package.json  plan-prompt.md  review-prompt.md  web-verify-prompt.md  win-verify-prompt.md
docs/: DESIGN.md  HANDOFF-blindfold-voice-diary-grill.md  PRD.md  example.obfuscated.json  findings-2026-07-04.md  handoff-blindfold-2026-06-17.md
docs/adr/: 0000-template.md  0001-litellm-gateway-own-restore-layer.md  0002-blindfold-every-hop.md  0003-inline-layered-detection-candidate-span.md  0004-relational-entity-linking.md  0005-surrogate-generation.md  0006-restore-mechanics.md  0007-store-global-registry-workspace-tags.md  0008-store-security-openbao-transit.md  0009-fail-closed-failure-policy.md  0010-learning-loop-async-review.md  0011-management-app-spa-json-api.md  0012-voice-diary-concept-reuse.md  0013-seed-only-sensitive-referents.md  0014-unify-referents-sensitivity-flag.md  0015-reidentify-is-a-decrypt-operation.md  0016-entity-merge-same-kind-only.md  0016-merge-collapses-same-kind-entities.md  0017-management-graph-renders-in-surrogate-space.md  0017-org-graph-surrogate-space-read-only.md  0018-entity-list-real-name-search-audit-on-miss.md  0019-proxy-config-auth-contract.md  0020-hand-rolled-local-interceptor-drop-litellm.md  0020-verify-pass-split-into-egress-gates.md  0021-runnable-entrypoint-loopback-and-root-token-guard.md  0022-wire-l3-adjudicator-local-ollama.md  0023-l3-suppression-token-granularity.md  0024-inflection-robust-restore-bounded-suffixes.md  0025-precision-fixes-at-privacy-safe-layers.md  0026-management-spa-built-bundle-one-process.md  0027-blocked-503s-carry-actionable-message-and-management-url.md  0027-blocks-are-actionable-errors-never-synthetic-responses.md  0028-canonical-rbac-role-vocabulary.md  0029-seed-bundle-portable-dictionary-not-mapping.md  0030-first-workspace-creator-becomes-admin.md  0031-provider-agnostic-l3-adjudicator-omlx.md  0032-l3-dismissal-log-seed-curation.md  0033-l3-candidate-precision-positional-case-heuristic-and-gliner-cascade.md  0033-l3-positional-case-heuristic.md  0034-gliner-model-provisioning-via-setup.md  (+10 more)
docs/agents/: domain.md  triage-labels.md
fixtures/: supervisor-golden-vectors.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
infra/: bootstrap-openbao.sh  docker-compose.dev.yml
packaging/: blindfold-proxy.spec  blindfold_proxy_entry.py
tests/: conftest.py  test_allowlist_persistence.py  test_audit_viewer_rbac.py  test_blindfold_engine.py  test_blocked_response_actionable_message.py  test_bootstrap.py  test_bootstrap_wiring.py  test_browser_leak_audit.py  test_cli_entity_graph.py  test_cli_serve.py  test_component_restore.py  test_config.py  test_confirm_writes_reidentify_entry.py  test_declared_tool_vocabulary.py  test_docs_reconciliation.py  test_entity_graph_postgres.py  test_entity_graph_repository.py  test_entity_graph_seed.py  test_entity_list_merge_spa.py  test_entity_list_spa.py  test_entity_list_write_spa.py  test_entity_merge.py  test_frozen_proxy_packaging.py  test_gliner_detection_settings_admin.py  test_gliner_detection_settings_view.py  test_gliner_extra_and_data_dir.py  test_gliner_model_provisioning.py  test_graph_editor_api.py  test_graph_editor_shell.py  test_graph_editor_spa.py  test_import_preview_commit.py  test_l1_detection.py  test_l2_detection.py  test_l2_performance.py  test_l3_detection.py  test_l3_gliner_activation_overlay.py  test_l3_gliner_cascade.py  test_l3_gliner_cascade_wiring.py  test_l3_non_blocking.py  test_l3_provider_wiring.py  (+68 more)
windows/: .gitignore
(+295 files in other folders)
