[project]
name = "blindfold"
version = "0.1.0"
description = "Blindfold — reversible LLM-anonymization proxy (blindfold/restore)."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "unidecode>=1.4.0",
    "uvicorn>=0.30",
]

[project.scripts]
blindfold = "blindfold.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "anyio>=4",
    "testcontainers>=4.14.2",
    "playwright>=1.61.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blindfold"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "full_pupa_corpus: opt-in full-PUPA-corpus leak-audit run (issue #77); set BLINDFOLD_FULL_PUPA_CORPUS=1 or select with -m",
]
