[project]
name = "blindfold"
version = "0.1.0"
description = "Blindfold — reversible LLM-anonymization proxy (blindfold/restore)."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "unidecode>=1.4.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# ADR-0034 §6: the GLiNER cascade's local NER model + ONNX runtime are opt-in
# weight (~197 MB), never a base dependency. Install with `blindfold[gliner]`.
# huggingface_hub ships transitively via gliner's own deps too, but this module
# (gliner_provisioning.py) imports it directly (ADR-0034 §4), so it's pinned
# explicitly rather than relied on implicitly.
gliner = [
    "gliner>=0.2.13",
    "onnxruntime>=1.19",
    "huggingface_hub>=0.35",
]

[project.scripts]
blindfold = "blindfold.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "anyio>=4",
    "testcontainers>=4.14.2",
    "playwright>=1.61.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blindfold"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "full_pupa_corpus: opt-in full-PUPA-corpus leak-audit run (issue #77); set BLINDFOLD_FULL_PUPA_CORPUS=1 or select with -m",
]
